# classi-cine

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  format.sh  publish.sh  tui_design.md
docs/: TUI_DESIGN.md  ffprobe-cache.md  media-features-classifier.md
src/: app.rs  bloom.rs  cache.rs  classifier.rs  features.rs  ffprobe.rs  logging.rs  main.rs  ngrams.rs  normalize.rs  path.rs  playlist.rs  tokenize.rs  tokenizer.rs  tokens.rs  viz.rs  vlc.rs  walk.rs
