[package]
name = "classi-cine"
version = "0.4.2"
edition = "2024"
repository = "https://github.com/mason-larobina/classi-cine"
readme = "README.md"
authors = ["Mason Larobina <mason.larobina@pm.me>"]
description = "A tool that builds smart video playlists by learning your preferences through Bayesian classification."
license = "MIT"
keywords = ["bayes", "classification", "tokenization", "vlc", "playlist"]
categories = ["command-line-utilities"]

[profile.perf]
inherits = "release"
debug = true

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
num_cpus = "1.16"
pathdiff = "0.2"
rand = "0.9"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4.2"
textplots = "0.8"
thread-priority = "1.2"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"
